provaParser.java
// Generated from prova.g4 by ANTLR 4.13.2

    import java.io.*;
    import java.util.Vector;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class provaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, END_PROGRAM=2, TYPE=3, END_TYPE=4, VAR=5, END_VAR=6, FUNC=7, 
		END_FUNC=8, ACTION=9, END_ACTION=10, IF=11, THEN=12, ELSEIF=13, ELSE=14, 
		ENDIF=15, WHILE=16, END_WHILE=17, FOR=18, IN=19, DO=20, END_FOR=21, READ=22, 
		WRITE=23, WRITELN=24, RETURN=25, BOOLEAN=26, INTEGER=27, REAL=28, VECTOR=29, 
		TUPLE=30, END_TUPLE=31, RANG=32, ENT=33, ENTSOR=34, NEG=35, ASSIGN=36, 
		PLUS=37, MINUS=38, MULT=39, DIV=40, INT_DIV=41, MOD=42, EQ=43, NEQ=44, 
		LT=45, LEQ=46, GT=47, GEQ=48, AND=49, OR=50, NOT=51, DOT=52, COMMA=53, 
		SEMICOLON=54, COLON=55, LPAREN=56, RPAREN=57, LBRACKET=58, RBRACKET=59, 
		ID=60, NUMBER=61, REAL_NUMBER=62, BOOLEAN_LITERAL=63, STRING=64, WS=65, 
		LINE_COMMENT=66, BLOCK_COMMENT=67;
	public static final int
		RULE_inici = 0, RULE_programa = 1, RULE_bloc_tipus = 2, RULE_declaracio_tipus = 3, 
		RULE_camp = 4, RULE_bloc_variables = 5, RULE_declaracio_variable = 6, 
		RULE_bloc_funcions = 7, RULE_accio = 8, RULE_funcio = 9, RULE_parametres = 10, 
		RULE_parametre = 11, RULE_bloc_sentencies = 12, RULE_sentencia = 13, RULE_assignacio = 14, 
		RULE_expr_booleana = 15, RULE_expr = 16, RULE_vector_access = 17, RULE_tuple_access = 18, 
		RULE_crida_funcio = 19, RULE_condicional = 20, RULE_bucle_mentre = 21, 
		RULE_number = 22, RULE_bucle_per = 23, RULE_crida_accio = 24, RULE_instruccio_io = 25, 
		RULE_tipus_basic = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"inici", "programa", "bloc_tipus", "declaracio_tipus", "camp", "bloc_variables", 
			"declaracio_variable", "bloc_funcions", "accio", "funcio", "parametres", 
			"parametre", "bloc_sentencies", "sentencia", "assignacio", "expr_booleana", 
			"expr", "vector_access", "tuple_access", "crida_funcio", "condicional", 
			"bucle_mentre", "number", "bucle_per", "crida_accio", "instruccio_io", 
			"tipus_basic"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'fprograma'", "'tipus'", "'ftipus'", "'variables'", 
			"'fvariables'", "'funcio'", "'ffuncio'", "'accio'", "'faccio'", "'si'", 
			"'llavors'", "'altrasi'", "'altrament'", "'fsi'", "'mentre'", "'fmentre'", 
			"'per'", "'en'", "'fer'", "'fper'", "'llegir'", "'escriure'", "'escriureln'", 
			"'retorna'", "'boolea'", "'enter'", "'real'", "'vector'", "'tupla'", 
			"'ftupla'", "'rang'", "'ent'", "'entsor'", "'~'", "':='", "'+'", "'-'", 
			"'*'", "'/'", "'\\'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
			"'&'", "'|'", "'no'", "'.'", "','", "';'", "':'", "'('", "')'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "END_PROGRAM", "TYPE", "END_TYPE", "VAR", "END_VAR", 
			"FUNC", "END_FUNC", "ACTION", "END_ACTION", "IF", "THEN", "ELSEIF", "ELSE", 
			"ENDIF", "WHILE", "END_WHILE", "FOR", "IN", "DO", "END_FOR", "READ", 
			"WRITE", "WRITELN", "RETURN", "BOOLEAN", "INTEGER", "REAL", "VECTOR", 
			"TUPLE", "END_TUPLE", "RANG", "ENT", "ENTSOR", "NEG", "ASSIGN", "PLUS", 
			"MINUS", "MULT", "DIV", "INT_DIV", "MOD", "EQ", "NEQ", "LT", "LEQ", "GT", 
			"GEQ", "AND", "OR", "NOT", "DOT", "COMMA", "SEMICOLON", "COLON", "LPAREN", 
			"RPAREN", "LBRACKET", "RBRACKET", "ID", "NUMBER", "REAL_NUMBER", "BOOLEAN_LITERAL", 
			"STRING", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "prova.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    SymTable<Registre> TS = new SymTable<>(1001);
	    boolean errorSemantico = false;
	    Bytecode x;
	    Long saltLinia;

	    public void notifyErrorListeners(Token offendingToken, String msg) {
	        super.notifyErrorListeners(offendingToken, msg, null);
	        errorSemantico = true;
	    }

	public provaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IniciContext extends ParserRuleContext {
		public ProgramaContext programa() {
			return getRuleContext(ProgramaContext.class,0);
		}
		public IniciContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inici; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).enterInici(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).exitInici(this);
		}
	}

	public final IniciContext inici() throws RecognitionException {
		IniciContext _localctx = new IniciContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inici);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			programa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(provaParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(provaParser.ID, 0); }
		public TerminalNode END_PROGRAM() { return getToken(provaParser.END_PROGRAM, 0); }
		public Bloc_tipusContext bloc_tipus() {
			return getRuleContext(Bloc_tipusContext.class,0);
		}
		public Bloc_funcionsContext bloc_funcions() {
			return getRuleContext(Bloc_funcionsContext.class,0);
		}
		public Bloc_variablesContext bloc_variables() {
			return getRuleContext(Bloc_variablesContext.class,0);
		}
		public List<Bloc_sentenciesContext> bloc_sentencies() {
			return getRuleContexts(Bloc_sentenciesContext.class);
		}
		public Bloc_sentenciesContext bloc_sentencies(int i) {
			return getRuleContext(Bloc_sentenciesContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programa);


		        x=new Bytecode("compilat");
		        saltLinia=x.addConstant("S","\n");
		        Vector<Long> trad = new Vector<Long>(10);
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(56);
				bloc_tipus();
				}
			}

			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FUNC || _la==ACTION) {
				{
				setState(59);
				bloc_funcions();
				}
			}

			setState(62);
			match(PROGRAM);
			setState(63);
			match(ID);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(64);
				bloc_variables();
				}
			}

			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				bloc_sentencies();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921504636536832L) != 0) );
			setState(72);
			match(END_PROGRAM);
			    if (!errorSemantico) {
			             trad.add(x.RETURN);
			             x.addMainCode(10L,10L,trad);
			             x.write();
			         }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloc_tipusContext extends ParserRuleContext {
		public Vector<Long> trad;
		public TerminalNode TYPE() { return getToken(provaParser.TYPE, 0); }
		public TerminalNode END_TYPE() { return getToken(provaParser.END_TYPE, 0); }
		public List<Declaracio_tipusContext> declaracio_tipus() {
			return getRuleContexts(Declaracio_tipusContext.class);
		}
		public Declaracio_tipusContext declaracio_tipus(int i) {
			return getRuleContext(Declaracio_tipusContext.class,i);
		}
		public Bloc_tipusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc_tipus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).enterBloc_tipus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).exitBloc_tipus(this);
		}
	}

	public final Bloc_tipusContext bloc_tipus() throws RecognitionException {
		Bloc_tipusContext _localctx = new Bloc_tipusContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloc_tipus);

			    ((Bloc_tipusContext)_localctx).trad = new Vector<Long>(100);
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(TYPE);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				declaracio_tipus();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(81);
			match(END_TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracio_tipusContext extends ParserRuleContext {
		public Vector<Long> trad;
		public TerminalNode ID() { return getToken(provaParser.ID, 0); }
		public List<TerminalNode> COLON() { return getTokens(provaParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(provaParser.COLON, i);
		}
		public TerminalNode VECTOR() { return getToken(provaParser.VECTOR, 0); }
		public Tipus_basicContext tipus_basic() {
			return getRuleContext(Tipus_basicContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(provaParser.NUMBER, 0); }
		public TerminalNode SEMICOLON() { return getToken(provaParser.SEMICOLON, 0); }
		public TerminalNode TUPLE() { return getToken(provaParser.TUPLE, 0); }
		public TerminalNode LBRACKET() { return getToken(provaParser.LBRACKET, 0); }
		public List<CampContext> camp() {
			return getRuleContexts(CampContext.class);
		}
		public CampContext camp(int i) {
			return getRuleContext(CampContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(provaParser.RBRACKET, 0); }
		public TerminalNode END_TUPLE() { return getToken(provaParser.END_TUPLE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(provaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(provaParser.COMMA, i);
		}
		public Declaracio_tipusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracio_tipus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).enterDeclaracio_tipus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).exitDeclaracio_tipus(this);
		}
	}

	public final Declaracio_tipusContext declaracio_tipus() throws RecognitionException {
		Declaracio_tipusContext _localctx = new Declaracio_tipusContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracio_tipus);

			    ((Declaracio_tipusContext)_localctx).trad = new Vector<Long>(100);
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(ID);
			setState(84);
			match(COLON);
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VECTOR:
				{
				setState(85);
				match(VECTOR);
				setState(86);
				tipus_basic();
				setState(87);
				match(COLON);
				setState(88);
				match(NUMBER);
				setState(89);
				match(SEMICOLON);
				}
				break;
			case TUPLE:
				{
				setState(91);
				match(TUPLE);
				setState(92);
				match(LBRACKET);
				setState(93);
				camp();
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(94);
					match(COMMA);
					setState(95);
					camp();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
				match(RBRACKET);
				setState(102);
				match(END_TUPLE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CampContext extends ParserRuleContext {
		public Vector<Long> trad;
		public TerminalNode ID() { return getToken(provaParser.ID, 0); }
		public TerminalNode COLON() { return getToken(provaParser.COLON, 0); }
		public Tipus_basicContext tipus_basic() {
			return getRuleContext(Tipus_basicContext.class,0);
		}
		public CampContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_camp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).enterCamp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).exitCamp(this);
		}
	}

	public final CampContext camp() throws RecognitionException {
		CampContext _localctx = new CampContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_camp);

		 	    ((CampContext)_localctx).trad = new Vector<Long>(100);
		     
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ID);
			setState(107);
			match(COLON);
			setState(108);
			tipus_basic();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloc_variablesContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(provaParser.VAR, 0); }
		public TerminalNode END_VAR() { return getToken(provaParser.END_VAR, 0); }
		public List<Declaracio_variableContext> declaracio_variable() {
			return getRuleContexts(Declaracio_variableContext.class);
		}
		public Declaracio_variableContext declaracio_variable(int i) {
			return getRuleContext(Declaracio_variableContext.class,i);
		}
		public Bloc_variablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).enterBloc_variables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof provaListener ) ((provaListener)listener).exitBloc_variables(this);
		}
	}

	public final Bloc_variablesContext bloc_variables() throws RecognitionException {
		Bloc_variablesContext _localctx = new Bloc_variablesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bloc_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(VAR);
			setState(114);
